--- a/public_html/index.html
+++ b/public_html/index.html
@@ -510,15 +510,12 @@
 											<h2 class="speaker-name">Gustavo Assi</h2>
 											<span class="speaker-job">- Doutor em Aeoronáutica</span>
 
-											<p>O Prof. Dr. Gustavo Roque da Silva Assi é docente da Escola Politécnica da Universidade de São Paulo.
-												Atua como Coordenador do Curso de Graduação em Engenhara Naval da EPUSP e membro da CRInt Comissão de
-												Relações Internacionais da EPUSP. Bolsista de Produtividade em Pesquisa do CNPq, atua como Coordenador do
-												Laboratório de Hidrodinâmica Experimental do NDF Núcleo de Dinâmica e Fluidos da EPUSP.
+											<p>O Prof. Dr. Gustavo Assi é docente da Escola Politécnica da Universidade de São Paulo. Atua como Coordenador do Curso de Graduação em Engenhara Naval. É bolsista de Produtividade em Pesquisa do CNPq e atua como Coordenador do Laboratório de Hidrodinâmica Experimental da USP.  É engenheiro Naval formado pela USP, Mestre em Engenharia Mecânica pela USP e PhD em Aeronáutica pelo Imperial College London em 2009. Já atuou como pesquisador visitante na Universidade de Oxford na Inglaterra e na Caltech nos EUA. Tem especial interesse em comunicação científica, filosofia da tecnologia e interação entre ciência, tecnologia e fé cristã..
 											</p>
 
 											<div class="speaker-website">
 												<h4>Currículo Lattes</h4>
-												<a href="#">www.johndoe.com</a><br><br>
+												<a href="http://lattes.cnpq.br/8559702581252966">http://lattes.cnpq.br/8559702581252966</a><br><br>
 											</div>
 
 											<div class="speaker-events">
@@ -572,7 +569,7 @@
 
 											<div class="speaker-website">
 												<h4>Currículo Lattes</h4>
-												<a href="#">www.johndoe.com</a><br><br>
+												<a href=" http://lattes.cnpq.br/1725848357337658"> http://lattes.cnpq.br/1725848357337658</a><br><br>
 											</div>
 
 
@@ -619,7 +616,7 @@
 
 											<div class="speaker-website">
 												<h4>Currículo Lattes</h4>
-												<a href="#">www.johndoe.com</a><br><br>
+												<a href=" http://lattes.cnpq.br/9609541796507055"> http://lattes.cnpq.br/9609541796507055</a><br><br>
 											</div>
 
 											<div class="speaker-events">
@@ -668,7 +665,7 @@
 
 											<div class="speaker-website">
 												<h4>Currículo Lattes</h4>
-												<a href="#">www.johndoe.com</a><br><br>
+												<a href=" http://lattes.cnpq.br/3353125804259611"> http://lattes.cnpq.br/3353125804259611</a><br><br>
 											</div>
 
 											<div class="speaker-events">
@@ -714,7 +711,7 @@
 
 											<div class="speaker-website">
 												<h4>Currículo Lattes</h4>
-												<a href="#">www.johndoe.com</a><br><br>
+												<a href=" http://lattes.cnpq.br/1830333142880880"> http://lattes.cnpq.br/1830333142880880</a><br><br>
 											</div>
 
 											<div class="speaker-events">
@@ -761,7 +758,7 @@
 
 											<div class="speaker-website">
 												<h4>Curículo Lattes</h4>
-												<a href="#">www.johndoe.com</a><br><br>
+												<a href="http://lattes.cnpq.br/4735005100512481">http://lattes.cnpq.br/4735005100512481</a><br><br>
 											</div>
 
 											<div class="speaker-events">
