--- a/public_html/index.html
+++ b/public_html/index.html
@@ -291,6 +291,16 @@
 						<div class="event ">
 							<div class="event-hour"></div>
 							<div class="event-content">
+								<p class="event-time"><i class="fa fa-clock-o"></i> 20 : 30min</p>
+								<h3 class="event-title">Programação Cultural</h3>
+								<p><a href="" data-toggle="modal" data-target="#speaker-modal-3"></a></p>
+							</div>
+						</div>
+
+						<!-- event -->
+						<div class="event ">
+							<div class="event-hour"></div>
+							<div class="event-content">
 								<p class="event-time"><i class="fa fa-clock-o"></i> 20h : 30min - 22 : 00min</p>
 								<h3 class="event-title">Mesa Redonda (Ciência e Fé)</h3>
 								<p>por <a href="" data-toggle="modal" data-target="#speaker-modal-4">Edu Albuquerque</a>,<a href="" data-toggle="modal"
