--- a/public_html/index.html
+++ b/public_html/index.html
@@ -221,7 +221,7 @@
 						<div class="event ">
 							<div class="event-hour"></div>
 							<div class="event-content">
-								<p class="event-time"><i class="fa fa-clock-o"></i> 8h : 30min - 9h : 00min</p>
+								<p class="event-time"><i class="fa fa-clock-o"></i> 8h : 30min - 9h : 30min</p>
 								<h3 class="event-title">Cerimonial de Abertura</h3>
 								<p>Programação Cultural</p>
 								<!-- <p>By <a href="#">John Doe</a></p> -->
@@ -229,22 +229,13 @@
 						</div>
 						<!-- /event -->
 
-						<!-- event -->
-						<div class="event ">
-							<div class="event-hour"></div>
-							<div class="event-content">
-								<p class="event-time"><i class="fa fa-clock-o"></i> 9h : 00min - 09 : 30min</p>
-								<h3 class="event-title">Intervalo</p>
-									<!-- <p>By <a href="#">John Doe</a></p> -->
-							</div>
-						</div>
 						<!-- /event -->
 
 						<!-- event -->
 						<div class="event ">
 							<div class="event-hour"></div>
 							<div class="event-content">
-								<p class="event-time"><i class="fa fa-clock-o"></i> 9h : 30min - 12 : 00min</p>
+								<p class="event-time"><i class="fa fa-clock-o"></i> 9h : 30min - 11 : 30min</p>
 								<h3 class="event-title">Decifrando sombras: avaliando os limites e a relação entre a ciência e a fé cristã</h3>
 								<p>por <a data-toggle="modal" data-target="#speaker-modal-1" href="">Dr. Gustavo Assi</a></p>
 							</div>
@@ -267,7 +258,7 @@
 						<div class="event ">
 							<div class="event-hour"></div>
 							<div class="event-content">
-								<p class="event-time"><i class="fa fa-clock-o"></i> 15h : 00min - 16 : 00min</p>
+								<p class="event-time"><i class="fa fa-clock-o"></i> 15h : 00min - 17 : 00min</p>
 								<h3 class="event-title">Reconhecendo as bases para o desenvolvimento sustentável:
 									reflexões nos campos da engenharia e da comunicação</h3>
 								<p>por <a href="" data-toggle="modal" data-target="#speaker-modal-1">Dr. Gustavo Assi</a></p>
@@ -335,8 +326,7 @@
 							<p class="event-time"><i class="fa fa-clock-o"></i> 10h : 00min - 12 : 00min</p>
 							<h3 class="event-title">Mesa Redonda - Fé e obra: ações de sustentabilidade socio-ambientais em regiões
 								semiáridas</h3>
-							<p>por Saint Clair (Moderador),<a href="" data-toggle="modal" data-target="#speaker-modal-4"> Edu
-									Albuquerque</a></p>
+							<p>por Saint Clair (Moderador)<a href="" data-toggle="modal" data-target="#speaker-modal-4"></a></p>
 						</div>
 					</div>
 					<!-- /event -->
