Correção de overflow de imagem, remoção do loader

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -70,8 +70,8 @@
 	<!-- /Header -->
 
 	<!-- Home -->
-	<div id="loader" class="loader"></div>
-	<div id="home" style="display:none">
+	
+	<div id="home">
 		<!-- background image -->
 		<div class="section-bg" style="background-image:url(./img/background01.jpg)" data-stellar-background-ratio="0.5"></div>
 		<!-- /background image -->
