Remoção do countdown

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -37,8 +37,8 @@
 				<!-- Logo -->
 				<div class="navbar-brand">
 					<a class="logo" href="index.html">
-						<img class="logo-img" src="./img/banner-alt.png" alt="logo">
-						<img class="logo-alt-img" src="./img/banner.png	" alt="logo">
+						<img class="logo-img" src="./img/banner-menor.png" alt="logo">
+						<img class="logo-alt-img" src="./img/banner-alt.png	" alt="logo">
 					</a>
 				</div>
 				<!-- /Logo -->
@@ -70,7 +70,7 @@
 	<!-- /Header -->
 
 	<!-- Home -->
-	
+
 	<div id="home">
 		<!-- background image -->
 		<div class="section-bg" style="background-image:url(./img/background01.jpg)" data-stellar-background-ratio="0.5"></div>
@@ -82,42 +82,31 @@
 			<div class="container">
 				<!-- row -->
 				<div class="row">
-					<!-- home content -->
-					<!-- <img class="center-block" style="width:40%;" src="./img/banner.png" alt=""> -->
-					<!-- Galery -->
-					<br>
 					<!-- container -->
-					<div class="container-fluid">
-						<!-- row -->
-						<div class="row">
-							<img class="" src="./img/banner.png" style="max-width: 50%; max-height: 50%; overflow: hidden;" alt="">
-							<!-- <h3 style="color:white;opacity: 0.9;">Cosmovisão para Vida e Desenvolvimento Social</h3> -->
+					<div class="container">
+						<!-- Conteudo do home -->
+						<div class="col-md-8 col-md-offset-2">
+
+							<div class="home-content">
+
+								<img class="" src="./img/banner.png" style="max-width: 70%; max-height: 70%; overflow: hidden;" alt="">
+
+								<a href="https://www.eventbrite.com.br/e/ii-semana-de-ciencia-fe-e-desenvolvimento-social-tickets-52320870131?ref=ebtn"
+								 class="main-btn">Quero participar</a>
+							</div>
 						</div>
-						<!-- /row -->
+						<!-- /home -->
 					</div>
 					<!-- /container -->
 				</div>
-				<!-- /Galery -->
-				<div class="col-md-8 col-md-offset-2">
-					<div class="home-content">
-						<div class="countdown">
-							<div id="timer" class="" style="color:white;"></div>
-						</div>
-						<a href="https://www.eventbrite.com.br/e/ii-semana-de-ciencia-fe-e-desenvolvimento-social-tickets-52320870131?ref=ebtn"
-						 class="main-btn">Quero participar</a>
-						<br><br><br>
-					</div>
-				</div>
-				<!-- /home content -->
+				<!-- /row -->
 			</div>
-			<!-- /row -->
+			<!-- /container -->
 		</div>
-		<!-- /container -->
+		<!-- /home_wrapper -->
 	</div>
-	<!-- /home wrapper -->
-	</div>
-	<!-- /Home -->
-	<!-- About -->
+	<!-- /home -->
+
 	<div id="about" class="section">
 		<!-- container -->
 		<div class="container">
@@ -136,15 +125,17 @@
 							<div text align="left">
 								<p class="">O diálogo entre Ciência e Fé está na base dos fundamentos intelectuais da Ciência Moderna no
 									século XVI.
-									O processo de secularização nas ciências, bem como na sociedade, tentou suprimir o legado de cientistas que, a partir de uma cosmovisão cristã,
+									O processo de secularização nas ciências, bem como na sociedade, tentou suprimir o legado de cientistas que, a
+									partir de uma cosmovisão cristã,
 									contribuíram diretamente para o avanço do desenvolvimento social, tecnológico e dos direitos humanos. </p>
 								<p class="">A II Semana de Ciência, Fé e Desenvolvimento Social traz como tema desse ano <b>“Cosmovisão para
 										a Vida e Desenvolvimento Social”</b> e apresenta como objetivos principais a discussão e a socialização de
-										teorias a metodologias fundadas em suas cosmovisões para análises de realidades humanas compreendidas em
-										sua totalidade humanística, tecnológica, social e espiritual. </p>
+									teorias a metodologias fundadas em suas cosmovisões para análises de realidades humanas compreendidas em
+									sua totalidade humanística, tecnológica, social e espiritual. </p>
 								<p class="">Desta forma, é com muita satisfação que convidamos toda comunidade acadêmica e sociedade civil
 									para participarem das Palestras, Workhshop e Mesas Redondas, contribuindo, assim, para promoção de um debate
-									crítico e para aprimoramento de habilidades e de competências do discurso científico e sua responsabilidade social
+									crítico e para aprimoramento de habilidades e de competências do discurso científico e sua responsabilidade
+									social
 									para construção de uma sociedade mais justa e fraternalmente solidária.</p>
 							</div>
 						</div>
@@ -172,7 +163,8 @@
 				<div class="col-md-8 col-md-offset-2 ">
 					<div class="cta-content text-center">
 						<h2>Participe!</h2>
-						<p class="lead">As inscrições estão disponíveis e o credenciamento ocorrerá no local do evento, a partir do dia 22 de Novembro.</p>
+						<p class="lead">As inscrições estão disponíveis e o credenciamento ocorrerá no local do evento, a partir do dia
+							22 de Novembro.</p>
 						<p class="lead">Os participantes credenciados receberão certificado de participação. </p>
 						<a href="https://www.eventbrite.com.br/e/ii-semana-de-ciencia-fe-e-desenvolvimento-social-tickets-52320870131?ref=ebtn"
 						 class="main-btn">Clique aqui e se inscreva!</a>
@@ -316,7 +308,7 @@
 								<p>por <a href="" data-toggle="modal" data-target="#speaker-modal-4">Dr. Edu Silvestre Albuquerque (UFRN)</a></p>
 							</div>
 						</div>
-					</div>
+					
 					<!-- /event -->
 
 					<!-- event -->
@@ -494,7 +486,7 @@
 				<!-- /speaker -->
 
 				<!-- speaker modal 1 -->
-				<div id="speaker-modal-1" class="speaker-modal modal ">
+				<div id="speaker-modal-1" class="speaker-modal modal fade ">
 					<div class="modal-dialog">
 						<div class="modal-content">
 							<button type="button" class="speaker-modal-close" data-dismiss="modal"></button>
@@ -510,7 +502,13 @@
 											<h2 class="speaker-name">Gustavo Assi</h2>
 											<span class="speaker-job">- Doutor em Aeoronáutica</span>
 
-											<p>O Prof. Dr. Gustavo Assi é docente da Escola Politécnica da Universidade de São Paulo. Atua como Coordenador do Curso de Graduação em Engenhara Naval. É bolsista de Produtividade em Pesquisa do CNPq e atua como Coordenador do Laboratório de Hidrodinâmica Experimental da USP.  É engenheiro Naval formado pela USP, Mestre em Engenharia Mecânica pela USP e PhD em Aeronáutica pelo Imperial College London em 2009. Já atuou como pesquisador visitante na Universidade de Oxford na Inglaterra e na Caltech nos EUA. Tem especial interesse em comunicação científica, filosofia da tecnologia e interação entre ciência, tecnologia e fé cristã..
+											<p>O Prof. Dr. Gustavo Assi é docente da Escola Politécnica da Universidade de São Paulo. Atua como
+												Coordenador do Curso de Graduação em Engenhara Naval. É bolsista de Produtividade em Pesquisa do CNPq e
+												atua como Coordenador do Laboratório de Hidrodinâmica Experimental da USP. É engenheiro Naval formado pela
+												USP, Mestre em Engenharia Mecânica pela USP e PhD em Aeronáutica pelo Imperial College London em 2009. Já
+												atuou como pesquisador visitante na Universidade de Oxford na Inglaterra e na Caltech nos EUA. Tem especial
+												interesse em comunicação científica, filosofia da tecnologia e interação entre ciência, tecnologia e fé
+												cristã..
 											</p>
 
 											<div class="speaker-website">
@@ -536,7 +534,6 @@
 													<p>Mesa Redonda (Ciência e Fé)</p>
 												</div>
 											</div>
-
 										</div>
 									</div>
 								</div>
@@ -548,7 +545,7 @@
 
 
 				<!-- speaker modal 2 -->
-				<div id="speaker-modal-2" class="speaker-modal modal ">
+				<div id="speaker-modal-2" class="speaker-modal modal fade ">
 					<div class="modal-dialog">
 						<div class="modal-content">
 							<button type="button" class="speaker-modal-close" data-dismiss="modal"></button>
@@ -581,7 +578,6 @@
 													<p>Perspectiva histórica sobre a busca anatômica pela alma</p>
 												</div>
 											</div>
-
 										</div>
 									</div>
 								</div>
