--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
 	<meta charset="utf-8">
@@ -9,27 +9,34 @@
 
 	<title>II Semana de Ciência, Fé e Desenvolvimento Social</title>
 
-	<!-- Fonte da Google -->
+	<!-- Google font -->
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
 
 	<!-- Bootstrap -->
 	<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" />
+
 	<!-- Owl Carousel -->
 	<link type="text/css" rel="stylesheet" href="css/owl.carousel.css" />
 	<link type="text/css" rel="stylesheet" href="css/owl.theme.default.css" />
-	<link type="text/css" rel="stylesheet" href="css/animate.css" />
-	<!-- Icones -->
+
+	<!-- Font Awesome Icon -->
 	<link rel="stylesheet" href="css/font-awesome.min.css">
+
 	<!-- Custom stlylesheet -->
 	<link type="text/css" rel="stylesheet" href="css/style.css" />
+
+	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
+			  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+			  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+			<![endif]-->
 </head>
-
-
 
 <body>
 
 	<!-- Header -->
-	<header id="header" class="transparent-navbar inicial">
+	<header id="header" class="transparent-navbar">
 		<!-- container -->
 		<div class="container">
 			<!-- navbar header -->
@@ -37,8 +44,8 @@
 				<!-- Logo -->
 				<div class="navbar-brand">
 					<a class="logo" href="index.html">
-						<img class="logo-img" src="./img/banner-menor.png" alt="logo">
-						<img class="logo-alt-img" src="./img/banner-alt.png	" alt="logo">
+						<img class="logo-img" src="./img/banner-alt.png" alt="logo">
+						<img class="logo-alt-img" src="./img/banner_menor.png" alt="logo">
 					</a>
 				</div>
 				<!-- /Logo -->
@@ -53,15 +60,17 @@
 
 			<!-- Navigation -->
 			<nav id="nav">
-				<ul class="main-nav nav navbar-nav navbar-right">
-					<li><a href="#home">Ínicio</a></li>
-					<li><a href="#about">Evento</a></li>
-					<li><a href="#schedule">Programação</a></li>
-					<li><a href="#speakers">Palestrantes</a></li>
-					<li><a href="#sponsors">Colaboradores</a></li>
-					<li><a href="#contact">Local</a></li>
-					<li><a href="SCFD-2016/index.html">Edição Anterior</a></li>
-				</ul>
+				<nav id="nav">
+					<ul class="main-nav nav navbar-nav navbar-right">
+						<li><a href="#home">Ínicio</a></li>
+						<li><a href="#about">Evento</a></li>
+						<li><a href="#schedule">Programação</a></li>
+						<li><a href="#speakers">Palestrantes</a></li>
+						<li><a href="#sponsors">Colaboradores</a></li>
+						<li><a href="#contact">Local</a></li>
+						<li><a href="SCFD-2016/index.html">Edição Anterior</a></li>
+					</ul>
+				</nav>
 			</nav>
 			<!-- /Navigation -->
 		</div>
@@ -70,7 +79,6 @@
 	<!-- /Header -->
 
 	<!-- Home -->
-
 	<div id="home">
 		<!-- background image -->
 		<div class="section-bg" style="background-image:url(./img/background01.jpg)" data-stellar-background-ratio="0.5"></div>
@@ -82,38 +90,38 @@
 			<div class="container">
 				<!-- row -->
 				<div class="row">
-					<!-- container -->
-					<div class="container">
-						<!-- Conteudo do home -->
-						<div class="col-md-8 col-md-offset-2">
+					<!-- home content -->
+					<div class="col-md-8 col-md-offset-2">
+						<div class="home-content">
+							<img class="imagem-logo" src="./img/banner_menor.png" style="max-width: 70%; max-height: 70%; overflow: hidden;"
+							 alt="">
 
-							<div class="home-content">
-
-								<img class="" src="./img/banner.png" style="max-width: 70%; max-height: 70%; overflow: hidden;" alt="">
-
-								<a href="https://www.eventbrite.com.br/e/ii-semana-de-ciencia-fe-e-desenvolvimento-social-tickets-52320870131?ref=ebtn"
-								 class="main-btn">Quero participar</a>
+							<div class="countdown">
+								<div id="timer" class="" style="color:white;"></div>
 							</div>
+
+							<a href="https://www.eventbrite.com.br/e/ii-semana-de-ciencia-fe-e-desenvolvimento-social-tickets-52320870131?ref=ebtn"
+							 class="main-btn">Quero participar</a>
 						</div>
-						<!-- /home -->
 					</div>
-					<!-- /container -->
+					<!-- /home content -->
 				</div>
 				<!-- /row -->
 			</div>
 			<!-- /container -->
 		</div>
-		<!-- /home_wrapper -->
+		<!-- /home wrapper -->
 	</div>
-	<!-- /home -->
+	<!-- /Home -->
 
+	<!-- About -->
 	<div id="about" class="section">
 		<!-- container -->
 		<div class="container">
 			<!-- row -->
 			<div class="row">
 				<!-- section title -->
-				<div class="section-title ">
+				<div class="section-title">
 					<h3 class="title"><span>O</span> <span style="color: #0b0f28;">Evento</span></h3>
 				</div>
 				<!-- /section title -->
@@ -121,24 +129,20 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<!-- about content -->
 					<div class="about-content">
-						<div style="float:left;">
-							<div text align="left">
-								<p class="">O diálogo entre Ciência e Fé está na base dos fundamentos intelectuais da Ciência Moderna no
-									século XVI.
-									O processo de secularização nas ciências, bem como na sociedade, tentou suprimir o legado de cientistas que, a
-									partir de uma cosmovisão cristã,
-									contribuíram diretamente para o avanço do desenvolvimento social, tecnológico e dos direitos humanos. </p>
-								<p class="">A II Semana de Ciência, Fé e Desenvolvimento Social traz como tema desse ano <b>“Cosmovisão para
-										a Vida e Desenvolvimento Social”</b> e apresenta como objetivos principais a discussão e a socialização de
-									teorias a metodologias fundadas em suas cosmovisões para análises de realidades humanas compreendidas em
-									sua totalidade humanística, tecnológica, social e espiritual. </p>
-								<p class="">Desta forma, é com muita satisfação que convidamos toda comunidade acadêmica e sociedade civil
-									para participarem das Palestras, Workhshop e Mesas Redondas, contribuindo, assim, para promoção de um debate
-									crítico e para aprimoramento de habilidades e de competências do discurso científico e sua responsabilidade
-									social
-									para construção de uma sociedade mais justa e fraternalmente solidária.</p>
-							</div>
-						</div>
+						<p class="">O diálogo entre Ciência e Fé está na base dos fundamentos intelectuais da Ciência Moderna no
+							século XVI.
+							O processo de secularização nas ciências, bem como na sociedade, tentou suprimir o legado de cientistas que, a
+							partir de uma cosmovisão cristã,
+							contribuíram diretamente para o avanço do desenvolvimento social, tecnológico e dos direitos humanos. </p>
+						<p class="">A II Semana de Ciência, Fé e Desenvolvimento Social traz como tema desse ano <b>“Cosmovisão para
+								a Vida e Desenvolvimento Social”</b> e apresenta como objetivos principais a discussão e a socialização de
+							teorias a metodologias fundadas em suas cosmovisões para análises de realidades humanas compreendidas em
+							sua totalidade humanística, tecnológica, social e espiritual. </p>
+						<p class="">Desta forma, é com muita satisfação que convidamos toda comunidade acadêmica e sociedade civil
+							para participarem das Palestras, Workhshop e Mesas Redondas, contribuindo, assim, para promoção de um debate
+							crítico e para aprimoramento de habilidades e de competências do discurso científico e sua responsabilidade
+							social
+							para construção de uma sociedade mais justa e fraternalmente solidária.</p>
 					</div>
 					<!-- /about content -->
 				</div>
@@ -148,35 +152,6 @@
 		<!-- /container -->
 	</div>
 	<!-- /About -->
-
-	<!-- CTA -->
-	<div id="cta" class="section">
-		<!-- background image -->
-		<div class="section-bg" style="background-image:url(./img/background01.jpg)" data-stellar-background-ratio="0.5"></div>
-		<!-- /background image -->
-
-		<!-- container -->
-		<div class="container ">
-			<!-- container -->
-			<div class="row">
-				<!-- cta content -->
-				<div class="col-md-8 col-md-offset-2 ">
-					<div class="cta-content text-center">
-						<h2>Participe!</h2>
-						<p class="lead">As inscrições estão disponíveis e o credenciamento ocorrerá no local do evento, a partir do dia
-							22 de Novembro.</p>
-						<p class="lead">Os participantes credenciados receberão certificado de participação. </p>
-						<a href="https://www.eventbrite.com.br/e/ii-semana-de-ciencia-fe-e-desenvolvimento-social-tickets-52320870131?ref=ebtn"
-						 class="main-btn">Clique aqui e se inscreva!</a>
-					</div>
-				</div>
-				<!-- /cta content -->
-			</div>
-			<!-- /row -->
-		</div>
-		<!-- /container -->
-	</div>
-	<!-- /CTA -->
 
 	<!-- Event Schedule -->
 	<div id="schedule" class="section">
@@ -210,7 +185,7 @@
 						<!-- /event -->
 
 						<!-- event -->
-						<div class="event ">
+						<div class="event">
 							<div class="event-hour"></div>
 							<div class="event-content">
 								<p class="event-time"><i class="fa fa-clock-o"></i> 8h : 30min - 9h : 30min</p>
@@ -219,8 +194,6 @@
 								<!-- <p>By <a href="#">John Doe</a></p> -->
 							</div>
 						</div>
-						<!-- /event -->
-
 						<!-- /event -->
 
 						<!-- event -->
@@ -279,6 +252,7 @@
 								<p><a href="" data-toggle="modal" data-target="#speaker-modal-3"></a></p>
 							</div>
 						</div>
+						<!-- /event -->
 
 						<!-- event -->
 						<div class="event ">
@@ -308,72 +282,72 @@
 								<p>por <a href="" data-toggle="modal" data-target="#speaker-modal-4">Dr. Edu Silvestre Albuquerque (UFRN)</a></p>
 							</div>
 						</div>
-					
-					<!-- /event -->
 
-					<!-- event -->
-					<div class="event ">
-						<div class="event-hour"></div>
-						<div class="event-content">
-							<p class="event-time"><i class="fa fa-clock-o"></i> 10h : 00min - 12 : 00min</p>
-							<h3 class="event-title">Mesa Redonda - Fé e obra: ações de sustentabilidade socio-ambientais em regiões
-								semiáridas</h3>
-							<p>por Saint Clair (Moderador)<a href="" data-toggle="modal" data-target="#speaker-modal-4"></a></p>
+						<!-- /event -->
+
+						<!-- event -->
+						<div class="event ">
+							<div class="event-hour"></div>
+							<div class="event-content">
+								<p class="event-time"><i class="fa fa-clock-o"></i> 10h : 00min - 12 : 00min</p>
+								<h3 class="event-title">Mesa Redonda - Fé e obra: ações de sustentabilidade socio-ambientais em regiões
+									semiáridas</h3>
+								<p>por Saint Clair (Moderador)<a href="" data-toggle="modal" data-target="#speaker-modal-4"></a></p>
+							</div>
 						</div>
-					</div>
-					<!-- /event -->
+						<!-- /event -->
 
-					<!-- event -->
-					<div class="event ">
-						<div class="event-hour"></div>
-						<div class="event-content">
-							<p class="event-time"><i class="fa fa-clock-o"></i> 13h : 15min - 14 : 30min</p>
-							<h3 class="event-title">O pioneirismo dos direitos humanos e dos direitos civis à luz da Bíblia</h3>
-							<p>por <a href="" data-toggle="modal" data-target="#speaker-modal-5">Dr. Roberto Monteiro (IFRN)</a></p>
+						<!-- event -->
+						<div class="event ">
+							<div class="event-hour"></div>
+							<div class="event-content">
+								<p class="event-time"><i class="fa fa-clock-o"></i> 13h : 15min - 14 : 30min</p>
+								<h3 class="event-title">O pioneirismo dos direitos humanos e dos direitos civis à luz da Bíblia</h3>
+								<p>por <a href="" data-toggle="modal" data-target="#speaker-modal-5">Dr. Roberto Monteiro (IFRN)</a></p>
+							</div>
 						</div>
-					</div>
-					<!-- /event -->
+						<!-- /event -->
 
-					<!-- event -->
-					<div class="event ">
-						<div class="event-hour"></div>
-						<div class="event-content">
-							<p class="event-time"><i class="fa fa-clock-o"></i> 14 : 30min - 15 : 00min</p>
-							<h3 class="event-title">Intervalo</p>
+						<!-- event -->
+						<div class="event ">
+							<div class="event-hour"></div>
+							<div class="event-content">
+								<p class="event-time"><i class="fa fa-clock-o"></i> 14 : 30min - 15 : 00min</p>
+								<h3 class="event-title">Intervalo</p>
+									<p><a href="#"></a></p>
+							</div>
+						</div>
+						<!-- /event -->
+
+						<!-- event -->
+						<div class="event ">
+							<div class="event-hour"></div>
+							<div class="event-content">
+								<p class="event-time"><i class="fa fa-clock-o"></i> 15h : 00min - 17 : 00min</p>
+								<h3 class="event-title">Perspectiva histórica sobre a busca anatômica pela alma</h3>
+								<p>por <a href="" data-toggle="modal" data-target="#speaker-modal-2">Dr. Bento João</a></p>
+							</div>
+						</div>
+						<!-- /event -->
+
+						<!-- event -->
+						<div class="event ">
+							<div class="event-hour"></div>
+							<div class="event-content">
+								<p class="event-time"><i class="fa fa-clock-o"></i>17 : 00min</p>
+								<h3 class="event-title">Encerramento</h3>
 								<p><a href="#"></a></p>
+							</div>
 						</div>
+						<!-- /event -->
 					</div>
-					<!-- /event -->
+					<!-- /events wrapper -->
 
-
-					<!-- event -->
-					<div class="event ">
-						<div class="event-hour"></div>
-						<div class="event-content">
-							<p class="event-time"><i class="fa fa-clock-o"></i> 15h : 00min - 17 : 00min</p>
-							<h3 class="event-title">Perspectiva histórica sobre a busca anatômica pela alma</h3>
-							<p>por <a href="" data-toggle="modal" data-target="#speaker-modal-2">Dr. Bento João</a></p>
-						</div>
-					</div>
-					<!-- /event -->
-
-					<!-- event -->
-					<div class="event ">
-						<div class="event-hour"></div>
-						<div class="event-content">
-							<p class="event-time"><i class="fa fa-clock-o"></i>17 : 00min</p>
-							<h3 class="event-title">Encerramento</h3>
-							<p><a href="#"></a></p>
-						</div>
-					</div>
-					<!-- /event -->
 				</div>
-
 			</div>
+			<!-- /row -->
 		</div>
-		<!-- /row -->
-	</div>
-	<!-- /container -->
+		<!-- /container -->
 	</div>
 	<!-- /Event Schedule -->
 
@@ -542,7 +516,6 @@
 					</div>
 				</div>
 				<!-- /speaker modal -->
-
 
 				<!-- speaker modal 2 -->
 				<div id="speaker-modal-2" class="speaker-modal modal fade ">
@@ -777,7 +750,6 @@
 					</div>
 				</div>
 				<!-- /speaker modal -->
-
 			</div>
 			<!-- /row -->
 		</div>
@@ -786,23 +758,24 @@
 	<!-- /Speakers -->
 
 	<!-- Sponsors -->
-	<div id="sponsors" class="section" style="background-color: #0b0f28;">
+	<div id="sponsors" class="section" style="background-color:#0b0f28;">
 		<!-- container -->
 		<div class="container">
 			<!-- row -->
 			<div class="row">
 				<!-- section title -->
 				<div class="section-title">
-					<h3 class="title" style="color:white;"><span>Colaboradores</span></h3>
+					<h3 class="title"><span>Os</span> <span style="color: white">Colaboradores</span></h3>
 				</div>
 				<!-- /section title -->
 
 				<!-- sponsor -->
-				<div class="center-block">
-					<img class="center-block" src="./img/barra_realizacao.png" style="max-width: 70em; height:auto;" alt="">
+				<div class="">
+					<a href="#" class="sponsor">
+						<img src="./img/barra_realizacao.png" alt="">
+					</a>
 				</div>
 				<!-- /sponsor -->
-
 
 			</div>
 			<!-- /row -->
@@ -811,21 +784,32 @@
 	</div>
 	<!-- /Sponsors -->
 
-	<!-- Contact -->
-	<div id="contact" class="section">
+	<!-- CTA -->
+	<!-- <div id="cta" class="section"> -->
+		<!-- background image -->
+		<!-- <div class="section-bg" style="background-image:url(./img/background03.jpg)" data-stellar-background-ratio="0.5"></div> -->
+		<!-- /background image -->
+
 		<!-- container -->
-		<div class="container">
-			<!-- row -->
-			<div class="row">
-				<!-- section title -->
-				<div class="section-title">
-					<h3 class="title"><span>Local</span> <span style="color: #0b0f28;"></span></h3>
-				</div>
-				<!-- /section title -->
-			</div>
+		<!-- <div class="container"> -->
+			<!-- container -->
+			<!-- <div class="row"> -->
+				<!-- cta content -->
+				<!-- <div class="col-md-8 col-md-offset-2">
+					<div class="cta-content text-center">
+						<h2>Get Ticket Now!</h2>
+						<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+							labore et dolore magna aliqua.</p>
+						<a href="#" class="main-btn">Buy Ticket</a>
+					</div>
+				</div> -->
+				<!-- /cta content -->
+			<!-- </div> -->
 			<!-- /row -->
-		</div>
+		<!-- </div> -->
 		<!-- /container -->
+	<!-- </div> -->
+	<!-- /CTA -->
 
 		<!-- Map -->
 		<div class=pyn--map-container>
@@ -847,39 +831,41 @@
 	<!-- /Contact -->
 
 	<!-- Footer -->
-	<footer id="footer" style="background-color: #0b0f28;">
+	<footer id="footer">
 		<!-- container -->
 		<div class="container">
 			<!-- row -->
 			<div class="row">
 
 				<!-- footer logo -->
-				<!-- <div class="col-md-4 col-md-push-4">
+				<div class="col-md-4 col-md-push-4">
 					<div class="footer-brand">
-						<a class="logo-alt-img" href="index.html">
-							<img class="logo-img" src="./img/logo.png" alt="logo">
+						<a class="logo" href="index.html">
+							<img class="logo-img" src="./img/banner-alt.png" alt="logo">
 						</a>
 					</div>
-				</div> -->
+				</div>
 				<!-- /footer logo -->
 
 				<!-- contact social -->
-				<div class="justify-content-center row align-items-center">
+				<div class="col-md-4 col-md-push-4">
 					<div class="contact-social">
-						<!-- <a href="https://www.facebook.com/semanacfds/"><i class="fa fa-facebook"></i></a> -->
+						<a href="https://www.facebook.com/semanacfds/"><i class="fa fa-facebook"></i></a>
+						<!-- <a href="#"><i class="fa fa-twitter"></i></a>
+						<a href="#"><i class="fa fa-google-plus"></i></a>
+						<a href="#"><i class="fa fa-instagram"></i></a>
+						<a href="#"><i class="fa fa-pinterest"></i></a>
+						<a href="#"><i class="fa fa fa-linkedin"></i></a> -->
 					</div>
 				</div>
 				<!-- /contact social -->
 
 				<!-- copyright -->
-				<div class="col-md-8 col-md-offset-2 text-center">
-					<span class="copyright" style="color:white;">
+				<div class="col-md-4 col-md-pull-8">
+					<span class="copyright">
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-						<a style="background-color: white; width: 20px;" href="https://www.facebook.com/semanacfds/"><i class="fa fa-facebook"></i></a>
-						<p>II Semana de Ciência, Fé e Desenvolvimento Social</p>
-						<p>2018 - Currais Novos - RN</p>
-						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-					</span>
+						IFRN - Campus Currais Novos 
+						<script>document.write(new Date().getFullYear());</script>
 				</div>
 				<!-- /copyright -->
 
@@ -896,10 +882,10 @@
 	<script src="js/jquery.waypoints.min.js"></script>
 	<script src="js/owl.carousel.min.js"></script>
 	<script src="js/jquery.stellar.min.js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+	<script src="js/google-map.js"></script>
 	<script src="js/jquery.countTo.js"></script>
 	<script src="js/main.js"></script>
-	<script src="js/timer.js"></script>
-
 
 </body>
 
