--- a/public_html/index.html
+++ b/public_html/index.html
@@ -68,6 +68,7 @@
 						<li><a href="#speakers">Palestrantes</a></li>
 						<li><a href="#sponsors">Colaboradores</a></li>
 						<li><a href="#contact">Local</a></li>
+						<li><a href="#certificados">Certificados</a></li>
 						<li><a href="SCFD-2016/index.html">Edição Anterior</a></li>
 					</ul>
 				</nav>
@@ -784,51 +785,73 @@
 	</div>
 	<!-- /Sponsors -->
 
-	<!-- CTA -->
-	<!-- <div id="cta" class="section"> -->
-		<!-- background image -->
-		<!-- <div class="section-bg" style="background-image:url(./img/background03.jpg)" data-stellar-background-ratio="0.5"></div> -->
-		<!-- /background image -->
+	<!-- Map -->
+	<div class=pyn--map-container>
+		<span class=pyn--dot-overlay></span>
+		<div class=container>
+			<div class=row>
+				<div class="col-md-7 col-md-push-5">
+					<div class="pyn--map-frame embed-responsive embed-responsive-4by3">
 
-		<!-- container -->
-		<!-- <div class="container"> -->
-			<!-- container -->
-			<!-- <div class="row"> -->
-				<!-- cta content -->
-				<!-- <div class="col-md-8 col-md-offset-2">
-					<div class="cta-content text-center">
-						<h2>Get Ticket Now!</h2>
-						<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-							labore et dolore magna aliqua.</p>
-						<a href="#" class="main-btn">Buy Ticket</a>
-					</div>
-				</div> -->
-				<!-- /cta content -->
-			<!-- </div> -->
-			<!-- /row -->
-		<!-- </div> -->
-		<!-- /container -->
-	<!-- </div> -->
-	<!-- /CTA -->
-
-		<!-- Map -->
-		<div class=pyn--map-container>
-			<span class=pyn--dot-overlay></span>
-			<div class=container>
-				<div class=row>
-					<div class="col-md-7 col-md-push-5">
-						<div class="pyn--map-frame embed-responsive embed-responsive-4by3">
-
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7932.164221739524!2d-36.534798537676316!3d-6.252911715387269!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7b1d5e8709765b9%3A0x302b8055cbe5d361!2sInstituto+Federal+de+Educa%C3%A7%C3%A3o%2C+Ci%C3%AAncia+e+Tecnologia+Rio+Grande+do+Norte%2C+Campus+Currais+Novos!5e0!3m2!1spt-BR!2sbr!4v1466890443774"
-							 width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-						</div>
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7932.164221739524!2d-36.534798537676316!3d-6.252911715387269!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7b1d5e8709765b9%3A0x302b8055cbe5d361!2sInstituto+Federal+de+Educa%C3%A7%C3%A3o%2C+Ci%C3%AAncia+e+Tecnologia+Rio+Grande+do+Norte%2C+Campus+Currais+Novos!5e0!3m2!1spt-BR!2sbr!4v1466890443774"
+						 width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 					</div>
 				</div>
 			</div>
 		</div>
-		<!-- /Map -->
 	</div>
-	<!-- /Contact -->
+	<!-- /Map -->
+	</div>
+
+	<!-- About -->
+	<div id="about" class="section" style="background-color:#0b0f28;">
+		<!-- container -->
+		<div class="container">
+			<!-- row -->
+			<div class="row">
+				<!-- section title -->
+				<div class="section-title">
+					<h3 class="title" id="certificados"> <span style="color: white;">Certificados</span></h3><br>
+					<p style="color:white;">Se você fez parte deste evento, emita o seu certificado já!</p>
+				</div>
+
+				<form>
+
+					<div class="form-row">
+
+						<div class="form-group col-xs-4">
+							<label style="color: white" for="inputState">CPF: </label>
+							<label class="sr-only" for="inlineFormInputName">CPF: </label>
+							<input type="text" class="form-control" id="cpf" placeholder="Formato: 000.000.000-00">
+						</div>
+
+						<div class="form-group col-xs-4">
+							
+							<label  style="color: white" for="select-edicao">Edição: </label>
+							<select  id="select-edicao" class="form-control">
+								<option selected>2016</option>
+								<option selected>2018</option>
+							</select>
+						</div>	<!--  -->
+						
+						<div style="margin-top:26px;" class="form-group col-xs-3">
+							<button id="botao_certificado" onclick="enviar()" type="submit" class="btn btn-default">Solicitar Certificado</button>
+						</div>
+
+					</div>
+
+				</form>
+				<!-- /about content -->
+			</div>
+		</div>
+		<!-- row -->
+	</div>
+	<!-- /container -->
+	</div>
+	<!-- /About -->
+
+
+
 
 	<!-- Footer -->
 	<footer id="footer">
@@ -864,7 +887,7 @@
 				<div class="col-md-4 col-md-pull-8">
 					<span class="copyright">
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-						IFRN - Campus Currais Novos 
+						IFRN - Campus Currais Novos
 						<script>document.write(new Date().getFullYear());</script>
 				</div>
 				<!-- /copyright -->
@@ -880,13 +903,17 @@
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/jquery.waypoints.min.js"></script>
-	<script src="js/owl.carousel.min.js"></script>
 	<script src="js/jquery.stellar.min.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
-	<script src="js/google-map.js"></script>
 	<script src="js/jquery.countTo.js"></script>
 	<script src="js/main.js"></script>
-
+	<script type="text/javascript" src="js/jquery-1.2.6.pack.js"></script>
+	<script type="text/javascript" src="js/jquery.maskedinput-1.1.4.pack.js"></script>
+	<script type="text/javascript" src="js/certificados.js"></script>
+	<script type="text/javascript">
+		$(document).ready(function(){
+			$("#cpf").mask("999.999.999-99");
+		});
+	</script>
 </body>
 
 </html>
