--- a/public_html/index.html
+++ b/public_html/index.html
@@ -829,8 +829,8 @@
 
 							<label style="color: white" for="select-edicao">Edição: </label>
 							<select id="select-edicao" class="form-control">
-								<!-- <option selected>2016</option> -->
-								<option selected>2018</option>
+								<option value="1" selected="selected">2018</option>
+								<option  value="2">2018 - Minicurso</option>
 							</select>
 						</div> <!--  -->
 
@@ -910,7 +910,6 @@
 	<script src="js/main.js"></script>
 	<script type="text/javascript" src="js/jquery-1.2.6.pack.js"></script>
 	<script type="text/javascript" src="js/jquery.maskedinput-1.1.4.pack.js"></script>
-
 	<script type="text/javascript" src="js/certificados.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function () {
